updated language and fix flex wrap info top on product page

--- a/src/components/screens/product/ProductInfo/ProductInfo.module.scss
+++ b/src/components/screens/product/ProductInfo/ProductInfo.module.scss
@@ -5,8 +5,18 @@
     @apply rounded-lg border-2 border-primary p-3;
   }
 
+  &Top {
+    gap: 1rem;
+  }
+
   @media (max-width: 768px) {
     width: 100%;
+  }
+
+  @media (max-width: 425px) {
+    &Top {
+      flex-direction: column;
+    }
   }
 }
 
